fixed flex wrap issue

--- a/src/components/styles/SeeProject.css
+++ b/src/components/styles/SeeProject.css
@@ -65,6 +65,8 @@
     display: flex;
     list-style-type: none;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 5px;
 }
 
@@ -103,6 +105,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     width: 100%;
     gap: 20px;
 
